--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -7,3 +7,10 @@ cryptography>=41.0
 psutil>=5.9.0
 watchdog>=3.0.0
 websocket-client>=1.6.0
+
+# OpenTelemetry
+opentelemetry-api>=1.20.0
+opentelemetry-sdk>=1.20.0
+opentelemetry-exporter-otlp-proto-grpc>=1.20.0
+opentelemetry-instrumentation-flask>=0.41b0
+opentelemetry-instrumentation-requests>=0.41b0
