fix: clean SDLC - scans on PR, build on main

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,8 +5,8 @@ on:
     tags:
       - 'v*'
 
-# Security scan must pass before release
 jobs:
+  # Security gate - must pass before building release artifacts
   security-gate:
     runs-on: ubuntu-latest
     steps:
