🔧 Fix port configuration
- Backend API: port 5056
- Frontend (Vite): port 5055 with proxy to backend
- WebSocket proxy configured for /ws/*

--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "express": "^5.0.0",
     "glob": "^11.0.0",
-    "ws": "^8.18.0"
+    "ws": "^8.19.0"
   },
   "devDependencies": {
-    "vitest": "^3.0.0",
-    "@vitest/coverage-v8": "^3.0.0"
+    "@vitest/coverage-v8": "^3.0.0",
+    "vitest": "^3.0.0"
   }
 }
