--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           context: .
           push: false
+          load: true
           tags: openclaw-sentinel:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
