chore: rebrand from Cangrejo Monitor/MoltBot to OpenClaw Sentinel
- Update all code references to OpenClaw Sentinel branding
- Remove old moltbot-guardian.json Grafana dashboard
- Update container names: cangrejo-* → sentinel-*
- Update package names: cangrejo-monitor-server → openclaw-sentinel-server
- Update UI titles and labels
- Update OTEL config namespaces
- Remove stale minified bundles (will rebuild)

All 230 tests passing.

--- a/docker-compose.host.yml
+++ b/docker-compose.host.yml
@@ -1,20 +1,19 @@
-# MoltBot Guardian - Docker Compose (Host Network Mode)
+# OpenClaw Sentinel - Docker Compose (Host Network Mode)
 # Use this for full network visibility (sees all host connections)
 # Usage: docker compose -f docker-compose.host.yml up -d
 
 services:
-  guardian:
+  sentinel:
     build: .
-    image: moltbot-guardian:latest
-    container_name: moltbot-guardian
+    image: ghcr.io/jfr992/openclaw-sentinel:latest
+    container_name: openclaw-sentinel
     network_mode: host
     volumes:
-      - ~/.clawdbot:/data:ro
-      - guardian-data:/home/moltbot
+      - ~/.openclaw:/data:ro
+      - sentinel-data:/app/data
     environment:
-      MOLTBOT_HOST: "127.0.0.1"  # Localhost only - critical for host network mode!
-      MOLTBOT_PORT: "5050"
-      CLAWDBOT_DIR: "/data"
+      PORT: "5056"
+      OPENCLAW_DIR: "/data"
     restart: unless-stopped
     # For full lsof visibility, need SYS_PTRACE capability
     cap_add:
@@ -23,4 +22,4 @@ services:
       - no-new-privileges:true
 
 volumes:
-  guardian-data:
+  sentinel-data:
