--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,20 +1,19 @@
-# MoltBot Guardian - Development (builds from source)
+# OpenClaw Sentinel - Development (builds from source)
 # Usage: docker compose -f docker-compose.dev.yml up --build
 
 services:
-  guardian:
+  sentinel:
     build: .
-    container_name: moltbot-guardian-dev
+    container_name: openclaw-sentinel-dev
     ports:
-      - "127.0.0.1:5050:5050"  # Localhost only
+      - "127.0.0.1:5056:5056"  # Localhost only
     volumes:
-      - ~/.clawdbot:/data:ro
-      - guardian-data:/home/moltbot
+      - ~/.openclaw:/data:ro
+      - sentinel-data:/app/data
     environment:
-      MOLTBOT_HOST: "0.0.0.0"  # Required for Docker networking
-      MOLTBOT_PORT: "5050"
-      CLAWDBOT_DIR: "/data"
+      PORT: "5056"
+      OPENCLAW_DIR: "/data"
     restart: unless-stopped
 
 volumes:
-  guardian-data:
+  sentinel-data:
