--- a/otel/otel-collector-config.yaml
+++ b/otel/otel-collector-config.yaml
@@ -26,7 +26,7 @@ exporters:
   # Export metrics to Prometheus
   prometheus:
     endpoint: "0.0.0.0:8889"
-    namespace: cangrejo
+    namespace: sentinel
 
   # Debug logging (disable in production)
   debug:
