--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cangrejo-monitor-server",
+  "name": "openclaw-sentinel-server",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
