--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "vitest": "^4.0.18",
     "ws": "^8.19.0"
   },
-  "description": "Agent Monitoring Dashboard for OpenClaw"
+  "description": "Agent Monitoring Dashboard for OpenClaw",
+  "engines": {
+    "node": ">=20.0.0"
+  }
 }
