--- a/docker-compose.otel.yaml
+++ b/docker-compose.otel.yaml
@@ -8,11 +8,13 @@
 services:
   sentinel:
     environment:
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
       - OTEL_SERVICE_NAME=openclaw-sentinel
       - ENVIRONMENT=production
     depends_on:
       - otel-collector
+    networks:
+      - sentinel-net
 
   otel-collector:
     image: otel/opentelemetry-collector-contrib:0.96.0
@@ -26,6 +28,8 @@ services:
       - "127.0.0.1:8889:8889"   # Prometheus metrics
       - "127.0.0.1:8888:8888"   # Collector metrics
     restart: unless-stopped
+    networks:
+      - sentinel-net
 
   prometheus:
     image: prom/prometheus:v2.50.1
@@ -42,6 +46,8 @@ services:
     depends_on:
       - otel-collector
     restart: unless-stopped
+    networks:
+      - sentinel-net
 
   grafana:
     image: grafana/grafana:10.4.0
@@ -59,6 +65,8 @@ services:
     depends_on:
       - prometheus
     restart: unless-stopped
+    networks:
+      - sentinel-net
 
 volumes:
   prometheus-data:
