--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,16 @@
     "lint": "eslint src tests"
   },
   "dependencies": {
+    "@opentelemetry/auto-instrumentations-node": "^0.69.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.211.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.211.0",
+    "@opentelemetry/sdk-node": "^0.211.0",
+    "@opentelemetry/semantic-conventions": "^1.39.0",
+    "better-sqlite3": "^12.6.2",
     "express": "^5.0.0",
     "glob": "^11.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ws": "^8.19.0"
   },
   "devDependencies": {
